--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,15 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/fs-extra": "^8.1.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.5",
+    "@types/pg": "^7.14.3",
     "@types/shelljs": "^0.8.7",
     "fs-extra": "^9.0.0",
     "nodemon": "^2.0.3",
