--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "googleapis": "^51.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.1.0"
   },
