--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,10 @@
     "express": "^4.17.1",
     "googleapis": "^51.0.0",
     "morgan": "^1.10.0",
-    "pg": "^8.1.0"
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "pg": "^8.1.0",
+    "query-string": "^6.12.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
