--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --watch --open",
+    "start": "ng serve --proxy-config proxy.conf.json --watch --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -48,6 +48,5 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
