--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "googleapis": "^51.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/express-serve-static-core": "^4.17.7",
     "@types/fs-extra": "^8.1.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.5",
