Fixed typescript build errors.  Set up launch file for debugging.

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -17,7 +17,7 @@
       "preLaunchTask": "npm: build",
       "sourceMaps": true,
       "smartStep": true,
-      "outFiles": ["${workspaceFolder}/dist/*.js"],
+      "outFiles": ["${workspaceFolder}/dist/server.js"],
     //   "args": [
     //     "--watch src -e ts,ejs" ,
     //     "--exec npm run dev:start"
