--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "author": "Brendt Bly",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",    
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "googleapis": "^51.0.0",
@@ -27,6 +27,7 @@
     "query-string": "^6.12.1"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.0",
     "@types/express": "^4.17.6",
     "@types/express-serve-static-core": "^4.17.7",
     "@types/fs-extra": "^8.1.0",
