--- a/angular.json
+++ b/angular.json
@@ -17,15 +17,20 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/movie-app",
+            "outputPath": "dist/movie-app/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "*",
+                "input": "node_modules/font-awesome/fonts",
+                "output": "/"
+              }
             ],
             "styles": [
               "src/styles.scss",
