--- a/server/package.json
+++ b/server/package.json
@@ -27,14 +27,15 @@
     "query-string": "^6.12.1"
   },
   "devDependencies": {
-    "@types/express-session": "^1.17.0",
     "@types/express": "^4.17.6",
     "@types/express-serve-static-core": "^4.17.7",
+    "@types/express-session": "^1.17.0",
     "@types/fs-extra": "^8.1.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.5",
     "@types/pg": "^7.14.3",
     "@types/shelljs": "^0.8.7",
+    "dotenv": "^8.2.0",
     "fs-extra": "^9.0.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
