--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "src/styles.scss"
             ],
             "scripts": []
           },
