--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist/*",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
-    "build": "npm-run-all clean lint tsc",
+    "build": "npm run clean && npm run lint && npm run tsc",
     "dev:start": "ts-node src/server.ts",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node ./dist/server.js",
@@ -38,7 +38,6 @@
     "dotenv": "^8.2.0",
     "fs-extra": "^9.0.0",
     "nodemon": "^2.0.3",
-    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "ts-node": "^8.10.1",
