--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dist/*",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
-    "build": "npm run clean && npm run lint && npm run tsc",
+    "copy-assets": "ts-node tools/copyAssets",
+    "build": "npm run all clean npm run lint tsc copy-assets",
     "dev:start": "ts-node src/server.ts",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node ./dist/server.js",
